@@ -254,6 +254,8 @@ private:
 
 	void connectStartDialog(dialogs::StartDialog *dlg);
 	void setStartDialogActions(dialogs::StartDialog *dlg);
+	void closeStartDialog(dialogs::StartDialog *dlg);
+	QWidget *getStartDialogOrThis();
 
 	void exportAnimation(
 		const drawdance::CanvasState &canvasState, const QString &path,
